@@ -1,3 +1,6 @@
+Jun 23, 2020
+  -human genes: incoming obsolete GNC IDs are skipped from processing
+
 Jun 17, 2020
   -non-rat genes: gene matching: added 3rd step matching by Ensembl Gene Ids
 
